# music-library-importer

./: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/music_importer/: __main__.py  cli.py  config.py  converter.py  debug.py  models.py  musicbrainz.py  tagger.py  utils.py
tests/: test_cli.py  test_converter.py  test_debug.py  test_musicbrainz.py  test_tagger.py  test_utils.py
